tests/baselines/reference/jsFileFunctionParametersAsOptional2.errors.txt
tests/cases/compiler/bar.ts(1,1): error TS2554: Expected 3 arguments, but got 0.
tests/cases/compiler/bar.ts(2,1): error TS2554: Expected 3 arguments, but got 1.
tests/cases/compiler/bar.ts(3,1): error TS2554: Expected 3 arguments, but got 2.


==== tests/cases/compiler/foo.js (0 errors) ====
    /**
     * @param a
     * @param b
     * @param c
     */
    function f(a, b, c) { }
    
    
==== tests/cases/compiler/bar.ts (3 errors) ====
    f(); // Error
    ~~~
!!! error TS2554: Expected 3 arguments, but got 0.
    f(1); // Error
    ~~~~
!!! error TS2554: Expected 3 arguments, but got 1.
    f(1, 2); // Error
    ~~~~~~~
!!! error TS2554: Expected 3 arguments, but got 2.
    
    f(1, 2, 3); // OK
    